# cubepi

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
cubepi/: __init__.py  errors.py  types.py
cubepi/agent/: __init__.py  _outcome.py  _tool_cycle.py  agent.py  loop.py  tool_decorator.py  tools.py  types.py
cubepi/checkpointer/: __init__.py  base.py  exceptions.py  memory.py  sqlite.py
cubepi/deferred/: __init__.py  _catalog.py  _expand_tool.py  middleware.py  types.py
cubepi/hitl/: __init__.py  ask_user.py  channel.py  middleware.py  policy.py  testing.py  types.py
cubepi/mcp/: __init__.py  _adapter.py  _tracing.py  http_loader.py  stdio_loader.py  types.py
cubepi/middleware/: __init__.py  base.py  subagents.py  todo.py
cubepi/providers/: __init__.py  anthropic.py  base.py  capability.py  fallback.py  faux.py  models.py  openai.py  openai_responses.py  reasoning_profiles.py
cubepi/tracing/: __init__.py  adapters.py  content.py  context.py  errors.py  meter.py  recorder.py  schema.py  tracer.py
cubepi/utils/: json_parse.py
dev/plans/: 2026-05-09-cubepi-implementation.md  2026-05-10-cubepi-improvement-plan.md  2026-05-13-cubepi-cubebox-readiness-plan.md  2026-05-15-cubepi-docs-site.md  2026-05-18-cubepi-tracing-phase-0.md  2026-05-28-hitl-channel.md  2026-06-05-conversation-fork.md  2026-06-05-images-provider-redesign.md  2026-06-08-boundmodel-convenience-methods.md  2026-06-08-loop-boundmodel.md  2026-06-09-deferred-tool-group.md  2026-06-10-deferred-dispatcher.md  2026-06-26-run-scoped-compaction.md  2026-07-05-tool-batch-fault-isolation.md  2026-07-21-langfuse-otlp-adapter.md
dev/runbooks/: cut-doc-version.md
dev/specs/: 2026-05-09-cubepi-framework-design.md  2026-05-10-cubepi-improvement-roadmap.md  2026-05-13-cubepi-cubebox-readiness-design.md  2026-05-15-cubepi-docs-site-design.md  2026-05-18-cubepi-tracing-design.md  2026-05-28-hitl-channel.md  2026-06-05-conversation-fork.md  2026-06-08-compaction-improvements.md  2026-06-09-deferred-tool-group.md  2026-06-10-deferred-dispatcher.md  2026-06-26-run-scoped-compaction.md  2026-07-05-tool-batch-fault-isolation.md  2026-07-21-langfuse-otlp-adapter.md
examples/: README.md  ask_user_form.py  checkpointing_postgres.py  persistent_chat.py  postgres_fastapi.py  resumable_tasks.py  sandbox_confirm.py  weather_agent.py
skills/cubepi/: SKILL.md
skills/cubepi-trace/: SKILL.md
tests/: test_capability.py  test_catalog.py  test_errors.py  test_init.py
tests/agent/: test_agent.py  test_agent_claim_run.py  test_agent_completion.py  test_agent_fork.py  test_agent_fork_once.py  test_agent_messages_kw.py  test_agent_run_id.py  test_agent_state.py  test_checkpointer_integration.py  test_e2e.py  test_loop.py  test_tool_cycle_invariant.py  test_tool_decorator.py  test_tool_event_extension.py  test_tools.py  test_types.py
tests/checkpointer/: test_exceptions.py  test_memory.py  test_memory_fork.py  test_memory_runs.py  test_mysql.py  test_postgres.py  test_postgres_fork.py  test_postgres_runs.py  test_postgres_schema_version_v3.py  test_sqlite.py  test_sqlite_fork.py
tests/deferred/: _helpers.py  test_agent_wiring.py  test_catalog.py  test_dispatch.py  test_middleware.py
tests/e2e/: conftest.py  test_fork_e2e.py
tests/hitl/: test_agent_abort_pending.py  test_agent_channel_wiring.py  test_agent_respond.py  test_checkpointed_channel.py  (+3 more)
website/: docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts  versions.json
(+395 files in other folders)
