[project]
name = "cubepi"
version = "0.4.0"
description = "Pythonic async-native agent framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.100.0",
    "openai>=2.36.0",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
sqlite = [
    "aiosqlite>=0.22.1",
]
postgres = [
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "msgpack>=1.0",
]
mcp = [
    "mcp>=1.0",
]
docs = [
    "griffe>=0.45",
]
tracing = [
    "opentelemetry-sdk>=1.30",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.29",
    "msgpack>=1.0",
    "mcp>=1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "website/scripts/tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cubepi"]
