[project]
name = "cubepi"
version = "0.13.0"
description = "Pythonic async-native agent framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.100.0",
    "openai>=2.36.0",
    "pydantic>=2.13.4",
]

[project.urls]
Homepage = "https://cubepi.ai"
Documentation = "https://cubepi.ai/docs"
Repository = "https://github.com/cubeplexai/cubepi"
Changelog = "https://cubepi.ai/changelog"
Issues = "https://github.com/cubeplexai/cubepi/issues"

[project.optional-dependencies]
sqlite = [
    "aiosqlite>=0.22.1",
]
postgres = [
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "msgpack>=1.0",
]
mysql = [
    "sqlalchemy>=2.0",
    "aiomysql>=0.2",
    "msgpack>=1.0",
    # Required by PyMySQL/aiomysql for MySQL 8's default caching_sha2_password
    # RSA password exchange over a non-TLS connection.
    "cryptography>=42",
]
mcp = [
    "mcp>=1.0",
]
docs = [
    "griffe>=0.45",
]
tracing = [
    "opentelemetry-sdk>=1.30",
]
tracing-otlp = [
    "opentelemetry-exporter-otlp-proto-http>=1.30",
]
trace-cli = [
    "rich>=13.0",
]

[project.scripts]
cubepi = "cubepi.cli.__main__:main"

[dependency-groups]
dev = [
    "aiomysql>=0.2",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.29",
    "msgpack>=1.0",
    "mcp>=1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "rich>=13.0",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0",
    "mypy>=2.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "website/scripts/tests"]

[tool.mypy]
python_version = "3.11"
files = ["cubepi"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cubepi"]
